seccion de proyectos: estructura terminada

--- a/index.html
+++ b/index.html
@@ -299,32 +299,45 @@
         </section>
 
         <section id="proyectos">
-            <h2 >PROYECTOS</h2>
+            <h2>PROYECTOS</h2>
             <div class="grid-proyectos">
-                <div class="item-a">
-                    <img src="https://picsum.photos/300/600/?random">
-                  </div>
-                  <div>
-                    <img src="https://picsum.photos/600/300/?random">
-                  </div>
-                  <div class="item-b">
-                    <img src="https://picsum.photos/200/200/?random">
-                  </div>
-                  <div>
-                    <img src="https://picsum.photos/200/500/?random">
-                  </div>
-                  <div class="item-c">
-                    <img src="https://picsum.photos/200/400/?random">
-                  </div>
-                  <div>
-                    <img src="https://picsum.photos/200/250/?random">
-                  </div>
-                  <div>
-                    <img src="https://picsum.photos/200/100/?random">
-                  </div>
-                  <div class="item-d">
-                    <img src="https://picsum.photos/200/600/?random">
-                  </div>
+                <div class="item">
+                    <a href="#proyectos ">
+                        <img src="https://picsum.photos/200/200/?random">
+                        <span>Proyecto hecho con HTML, CSS Y javascript</span>
+                    </a>
+                </div>
+                <div class="item">
+                    <a href="#proyectos ">
+                        <img src="https://picsum.photos/200/200/?random">
+                        <span>Proyecto hecho con HTML, CSS Y javascript</span>
+                    </a>
+                </div>
+                <div class="item">
+                    <a href="#proyectos ">
+                        <img src="https://picsum.photos/200/200/?random">
+                        <span>Proyecto hecho con HTML, CSS Y javascript</span>
+                    </a>
+                </div>
+                <div class="item">
+                    <a href="#proyectos ">
+                        <img src="https://picsum.photos/200/200/?random">
+                        <span>Proyecto hecho con HTML, CSS Y javascript</span>
+                    </a>
+                </div>
+                <div class="item">
+                    <a href="#proyectos ">
+                        <img src="https://picsum.photos/200/200/?random">
+                        <span>Proyecto hecho con HTML, CSS Y javascript</span>
+                    </a>
+                </div>
+                <div class="item">
+                    <a href="#proyectos ">
+                        <img src="https://picsum.photos/200/200/?random">
+                        <span>Proyecto hecho con HTML, CSS Y javascript</span>
+                    </a>
+                </div>
+
             </div>
         </section>
 
