nuevos proyectos agregados

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
 
         <section id="acercaDeMi" class="acerca">
             <h2>Acerca de mi</h2>
-            <a href="#" class="btn-download">Descargar CV</a>
+            <a href="https://drive.google.com/file/d/18KgiRPxu3swXRGlVdYn9gGynk98fF0nw/view?usp=sharing"
+                class="btn-download" target="_blank">Descargar CV</a>
             <dl>
                 <dt>
                     <h3>Estudios</h3>
@@ -154,7 +155,7 @@
                         <div class="skill">
                             <div class="percentage">
                                 <div class="inner">
-                                    <a>75%</a>
+                                    <a>80%</a>
                                 </div>
                                 <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
                                     <defs>
@@ -163,7 +164,7 @@
                                             <stop offset="100%" stop-color="#24bbaa" />
                                         </linearGradient>
                                     </defs>
-                                    <circle class="p75" cx="60" cy="60" r="49" stroke-linecap="round" />
+                                    <circle class="p80" cx="60" cy="60" r="49" stroke-linecap="round" />
                                 </svg>
                             </div>
                             <p>HTML</p>
@@ -172,7 +173,7 @@
                         <div class="skill">
                             <div class="percentage">
                                 <div class="inner">
-                                    <a>50%</a>
+                                    <a>60%</a>
                                 </div>
                                 <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
                                     <defs>
@@ -181,7 +182,7 @@
                                             <stop offset="100%" stop-color="#24bbaa" />
                                         </linearGradient>
                                     </defs>
-                                    <circle class="p50" cx="60" cy="60" r="49" stroke-linecap="round" />
+                                    <circle class="p60" cx="60" cy="60" r="49" stroke-linecap="round" />
                                 </svg>
                             </div>
                             <p>CSS</p>
@@ -212,7 +213,7 @@
                         <div class="skill">
                             <div class="percentage">
                                 <div class="inner">
-                                    <a>85%</a>
+                                    <a>80%</a>
                                 </div>
                                 <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
                                     <defs>
@@ -221,7 +222,7 @@
                                             <stop offset="100%" stop-color="#24bbaa" />
                                         </linearGradient>
                                     </defs>
-                                    <circle class="p85" cx="60" cy="60" r="49" stroke-linecap="round" />
+                                    <circle class="p80" cx="60" cy="60" r="49" stroke-linecap="round" />
                                 </svg>
                             </div>
                             <p>Adonis JS</p>
@@ -256,7 +257,7 @@
                         <div class="skill">
                             <div class="percentage">
                                 <div class="inner">
-                                    <a>65%</a>
+                                    <a>50%</a>
                                 </div>
                                 <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
                                     <defs>
@@ -265,7 +266,7 @@
                                             <stop offset="100%" stop-color="#24bbaa" />
                                         </linearGradient>
                                     </defs>
-                                    <circle class="p65" cx="60" cy="60" r="49" stroke-linecap="round" />
+                                    <circle class="p50" cx="60" cy="60" r="49" stroke-linecap="round" />
                                 </svg>
                             </div>
                             <p>JavaScript</p>
@@ -284,13 +285,35 @@
                         <div class="skill">
                             <div class="percentage">
                                 <div class="inner">
-                                    <a>75%</a>
+                                    <a>70%</a>
                                 </div>
                                 <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
-                                    <circle class="p75" cx="60" cy="60" r="49" stroke-linecap="round" />
+                                    <circle class="p70" cx="60" cy="60" r="49" stroke-linecap="round" />
                                 </svg>
                             </div>
                             <p>Java</p>
+                        </div>
+                        <div class="skill">
+                            <div class="percentage">
+                                <div class="inner">
+                                    <a>25%</a>
+                                </div>
+                                <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
+                                    <circle class="p25" cx="60" cy="60" r="49" stroke-linecap="round" />
+                                </svg>
+                            </div>
+                            <p>Dart</p>
+                        </div>
+                        <div class="skill">
+                            <div class="percentage">
+                                <div class="inner">
+                                    <a>25%</a>
+                                </div>
+                                <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
+                                    <circle class="p25" cx="60" cy="60" r="49" stroke-linecap="round" />
+                                </svg>
+                            </div>
+                            <p>Python</p>
                         </div>
                     </div>
                 </div>
@@ -299,45 +322,79 @@
         </section>
 
         <section id="proyectos">
-            <h2>PROYECTOS</h2>
+            <h2>Proyectos</h2>
             <div class="grid-proyectos">
                 <div class="item">
-                    <a href="#proyectos ">
-                        <img src="https://picsum.photos/200/200/?random">
-                        <span>Proyecto hecho con HTML, CSS Y javascript</span>
-                    </a>
+                    <img src="images/buscaminas.jpg" alt="imagen del proyecto">
+                    <p>Buscaminas</p>
+                    <div class="background">
+                        <span>Proyecto escolar hecho con HTML, CSS y JQuery.Una copia del clásico juego del buscaminas</span>
+                        <a href="https://github.com/Edwar3D/Buscaminas" target="_blank">Repositorio</a>
+                        <a href="https://edwar3d.github.io/Buscaminas/" target="_blank">Visualizar</a>
+                    </div>
                 </div>
                 <div class="item">
-                    <a href="#proyectos ">
-                        <img src="https://picsum.photos/200/200/?random">
-                        <span>Proyecto hecho con HTML, CSS Y javascript</span>
-                    </a>
+                    <img src="images/aztechgames.jpg">
+                    <p>Aztech Games</p>
+                    <div class="background">
+                        <span>Proyecto escolar deployado en Heroku utilizando la base de datos de PostgreSQL, hecho con Adonis js y Boostrapt, un página web para promocionar videojuegos</span>
+                        <a href="https://github.com/Edwar3D/aztechgames" target="_blank">Repositorio</a>
+                        <a href="https://aztech-games.herokuapp.com/" target="_blank">Visualizar</a>
+                    </div>
                 </div>
                 <div class="item">
-                    <a href="#proyectos ">
-                        <img src="https://picsum.photos/200/200/?random">
-                        <span>Proyecto hecho con HTML, CSS Y javascript</span>
-                    </a>
+                    <img src="images/lading-starbucks.png">
+                    <p>Landing-Starbucks</p>
+                    <div class="background">
+                        <span>Landing page hecho con HTML, CSS Y javascript</span>
+                        <a href="https://github.com/Edwar3D/LandingPageStarbucks" target="_blank">Repositorio</a>
+                        <a href="https://edwar3d.github.io/LandingPageStarbucks/" target="_blank">Visualizar</a>
+                    </div>
                 </div>
                 <div class="item">
-                    <a href="#proyectos ">
-                        <img src="https://picsum.photos/200/200/?random">
-                        <span>Proyecto hecho con HTML, CSS Y javascript</span>
-                    </a>
+                    <img src="images/order-sumary.jpg">
+                    <p>Order-Summary</p>
+                    <div class="background">
+                        <span>Reto por parte de la página frontendmentor hecho con HTML, CSS Y javascript</span>
+                        <a href="https://github.com/Edwar3D/Order-Summary-challenge" target="_blank">Repositorio</a>
+                        <a href="https://edwar3d.github.io/Order-Summary-challenge/" target="_blank">Visualizar</a>
+                    </div>
+                </div>
+                
+                <div class="item">
+                    <img src="images/Contacts QR.png">
+                    <p>Contacts QR</p>
+                    <div class="background">
+                        <span>Proyecto escolar hecho con Flutter, una aplicación móvil para android la cual comparte los contactos por código QR </span>
+                        <a href="https://github.com/Edwar3D/ContactsQRApp" target="_blank">Repositorio</a>
+                        <a href="https://play.google.com/store/apps/details?id=com.chem.qr_app" target="_blank">Visualizar</a>
+                    </div>
                 </div>
                 <div class="item">
-                    <a href="#proyectos ">
-                        <img src="https://picsum.photos/200/200/?random">
-                        <span>Proyecto hecho con HTML, CSS Y javascript</span>
-                    </a>
+                    <img src="images/chem-organizar.jpg">
+                    <p>Chem Organizer</p>
+                    <div class="background">
+                        <span>Proyecto escolar por equipo hecho con Flutter, una aplicación móvil para android utilizando Firebase</span>
+                        <!-- <a href="https://github.com/Edwar3D/ContactsQRApp" target="_blank">Repositorio</a> -->
+                        <a href="https://play.google.com/store/apps/details?id=com.chem.chem_organizer" target="_blank">Visualizar</a>
+                    </div>
                 </div>
                 <div class="item">
-                    <a href="#proyectos ">
-                        <img src="https://picsum.photos/200/200/?random">
-                        <span>Proyecto hecho con HTML, CSS Y javascript</span>
-                    </a>
+                    <img src="images/comandos-git.png">
+                    <p>Autómata de comados git</p>
+                    <div class="background">
+                        <span>Proyecto hecho java para simular como funciona un autómata, usando como ejemplo los principales comandos de Git</span>
+                        <a href="https://github.com/Edwar3D/Automata-de-comados-git" target="_blank">Repositorio</a>
+                    </div>
                 </div>
-
+                <div class="item">
+                    <img src="images/analizador.jpg">
+                    <p>Analizador Sintactico</p>
+                    <div class="background">
+                        <span>Proyecto hecho java y javaFX para simular un compilador de un nuevo lenguaje con el uso de gramaticas y expresiones regulares</span>
+                        <a href="https://github.com/Edwar3D/analizador-sintactico" target="_blank">Repositorio</a>
+                    </div>
+                </div>
             </div>
         </section>
 
