--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Eduardo Marcelino Diaz Diaz</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="styleSmall.css">
+    <link rel="stylesheet" href="styleSmallLandscape.css">
 </head>
 
 <body>
