--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
                 <img class="perfil" src="images/imagen.png" alt="">
             </div>
-            
+
         </section>
 
         <section id="acercaDeMi" class="acerca">
@@ -127,18 +127,78 @@
             <h2>Experiencia</h2>
             <dl>
                 <dt>
+                    <h3>H.AYUNTAMIENTO DE TUXTLA GUTIÉRREZ (PASANTE)| 09/2021 – 12/2021</h3>
+                </dt>
+                <dd>
+                    <p><b>Desarrollo Web con Laravel</b></p>
+                    <p>El proyecto denominado Sistema de Registro y Control de Inspectores, Verificadores y Visitadores
+                        municipales
+                        autorizados, es una aplicación web en enfocado para las dependencias de gobierno que cuenta el
+                        ayuntamiento municipal de Tuxtla Gutiérrez permitiendo el registro y control de sus inspectores,
+                        verificadores
+                        y visitadores. Y en un contexto social por las inspecciones o verificaciones que realizan a las
+                        instituciones o
+                        empresas de la ciudad para verificar que los servicios sean adecuados, por ultimo le brinda a la
+                        población la
+                        información de sus servidores públicos (inspectores, verificadores, supervisores).</p>
+                    <br>
+                    <br>
+                    <p>Mis aportaciones en este proyecto fueron:</p>
+                    <br>
+                    <ul>
+                        <li>Diseño de la base de datos.</li>
+                        <li>Construcción de la base de datos.</li>
+                        <li>Implementación del módulo de ciudadano.</li>
+                        <li>Buscador de inspectores.</li>
+                        <li>CRUD* de dependencias.</li>
+                        <li>CRUD* de inspectores.</li>
+                        <li>Registro de una nueva orden de inspección.</li>
+                    </ul>
+                </dd>
+                <dt>
                     <h3>JAMXTECH (PASANTE)| 05/2020 – 09/2020</h3>
                 </dt>
                 <dd>
                     <p><b>Desarrollo Font-end en Android</b></p>
-                    <p>Implementación de la interfaz de usuario a partir de una versión de Ionic para una aplicación
-                        nativa para Android desarrollado con Kotlin.</p>
+                    <p>Iku Trip es una aplicación móvil implementado en el framework ionic y busca que las personas
+                        tengan una
+                        buena administración de un viaje en Hokkaido, Japón.Como principal trabajo fue desarrollar las
+                        vistas del proyecto implementadi en Ionic, para ser
+                        desarrollados para Android Nativo; conservando los estilos y colores originales de la aplicación
+                        y adaptando al diseño de las aplicaciones móviles de Android. El equipo de trabajo fue 4
+                        integrantes a
+                        cada uno se le asignó una tarea de implementar determinadas vistas de la aplicación.</p>
+                    <br>
+                    <p>Mis aportaciones en este proyecto fueron:</p>
+                    <br>
+                    <ul>
+                        <li>Perfil de usuario</li>
+                        <li>Vista para editar los datos del usuario.</li>
+                        <li>Vista principal denomindado Discover.</li>
+                        <li>Vista de reservaciones del usuario.</li>
+                    </ul>
+                    <br>
                     <p><b>Desarrollo Web con Angujar JS</b></p>
-                    <p>Implementación de interfaz y lógica de módulos de una plataforma web utilizando la arquitectura
-                        MVC (Modelo, vista, controlador), desarrollado con el framework de Angular JS usando el lenguaje
+                    <p>CMR-Netage es una plataforma Web en donde se busca la administración de venta de varios
+                        artículos, así como en la parte de los pedidos que realiza cada cliente, cuenta varias secciones
+                        para el manejo de la información,
+                        como lo es la sección de clientes, órdenes de venta, planes de venta y los productos que se
+                        ofrecen.
+                        Mi funcion principal fue la implementación de interfaz y lógica de módulos de una plataforma web
+                        utilizando la arquitectura MVC (Modelo, vista, controlador), desarrollado con el framework de
+                        Angular JS usando el lenguaje
                         de Typescript y una base de datos en Firebase.
                     </p>
+                    <br>
+                    <p>Mis aportaciones en este proyecto fueron:</p>
+                    <br>
+                    <ul>
+                        <li>Desarrollar el componente para la visualización de clientes registrados.</li>
+                        <li>Implementar la opción de subir archivos.</li>
+                        <li>Desarrollar el componente para la visualización y aprobación de planes de ventas.</li>
+                    </ul>
                 </dd>
+
                 <dt>
                     <h3>UNIVERSIDAD POLITÉCNICA DE CHIAPAS | 2018 - 2021</h3>
                 </dt>
@@ -254,6 +314,17 @@
                                 </svg>
                             </div>
                             <p>Flutter</p>
+                        </div>
+                        <div class="skill">
+                            <div class="percentage">
+                                <div class="inner">
+                                    <a>25%</a>
+                                </div>
+                                <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
+                                    <circle class="p25" cx="60" cy="60" r="49" stroke-linecap="round" />
+                                </svg>
+                            </div>
+                            <p>Laravel</p>
                         </div>
                     </div>
                 </div>
@@ -409,13 +480,24 @@
                         <a href="https://github.com/Edwar3D/analizador-sintactico" target="_blank">Repositorio</a>
                     </div>
                 </div>
+                <div class="item">
+                    <img src="images/myChat.png">
+                    <p>My Chat</p>
+                    <div class="background">
+                        <span>Ejemplo de un chat básico de dos clientes ya registrados, hecho con Angular JS, Node JS con Sockets y
+                             una base de datos de MongoDB </span>
+                        <a href="https://github.com/Edwar3D/my-chat-client" target="_blank">Repositorio</a>
+                        <a href="https://my-chat-client.herokuapp.com/login"
+                            target="_blank">Visualizar</a>
+                    </div>
+                </div>
             </div>
         </section>
 
         <section id="contacto">
             <h2 class="title">Contacto</h2>
             <div class="container">
-                <form id="contactme" action="https://formspree.io/f/mgerqwvl" method="POST" >
+                <form id="contactme" action="https://formspree.io/f/mgerqwvl" method="POST">
                     <h4>Envíame un correo</h4>
                     <label for="name">Nombre completo</label>
                     <input name="name" type="text" required>
